--- a/SampleProject.Dal/SampleProject.Dal.csproj
+++ b/SampleProject.Dal/SampleProject.Dal.csproj
@@ -1,15 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="3.1.21" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\SampleProject.Core\SampleProject.Core.csproj" />
+    <ProjectReference Include="..\SampleProject.Entities\SampleProject.Entities.csproj" />
   </ItemGroup>
 
 </Project>
