--- a/SampleProject.WebApp/appsettings.json
+++ b/SampleProject.WebApp/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": { "Default": "Server=DESKTOP-8EHVPE9\\SQLEXPRESS;Database=SampleProject;Trusted_Connection=True;" }
 }
