--- a/SampleProject.WebApp/SampleProject.WebApp.csproj
+++ b/SampleProject.WebApp/SampleProject.WebApp.csproj
@@ -29,4 +29,12 @@
     <ProjectReference Include="..\SampleProject.Business\SampleProject.Business.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Controllers\" />
+    <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="Areas\Admin\Views\" />
+    <Folder Include="Areas\Member\Data\" />
+  </ItemGroup>
+
 </Project>
